# m1frame

./: .env.example  .gitignore  .ruff.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  __main__.py  config.yaml  dashboard.html  llm_client.py  purpose.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
agents/: __init__.py  bmad.py  council.py  karpathy.py  logger.py  metrics.py  miras.py  openplanter.py  scheduler.py  wiki.py
api/: __init__.py  server.py
scripts/: __init__.py  ingest_pdf.py  qa_validate.py  reset_workspace.py  run_workflow.py
wiki/: index.md
