[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m1frame"
version = "1.0.0"
description = "Portable multi-agent AI framework: BMAD · Council · Miras · Karpathy · LLM Wiki"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Mahdad Shakiba"}]
keywords = ["ai", "agents", "llm", "bmad", "multi-agent", "workflow", "karpathy", "miras"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "anthropic>=0.40.0",
    "openai>=1.30.0",
]

[project.urls]
Homepage = "https://github.com/mahdadshakiba/m1frame"
Documentation = "https://github.com/mahdadshakiba/m1frame#readme"
"Bug Tracker" = "https://github.com/mahdadshakiba/m1frame/issues"
Changelog = "https://github.com/mahdadshakiba/m1frame/blob/main/CHANGELOG.md"

[project.scripts]
m1frame = "scripts.run_workflow:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0", "mypy>=1.10.0"]
vector = ["lancedb>=0.8.0", "sentence-transformers>=3.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["qa_validate.py"]
